--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,10 @@
 	<name>mssc-beer-inventory-failover</name>
 	<description>Inventory failover for Spring GURU Microservices course</description>
 
+	<properties>
+		<docker.image.prefix>abechraoui</docker.image.prefix>
+	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
